openshift/mysql_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-db
  labels:
    name: mysql-db
    app: dvna-app
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    name: mysql-pod
    app: dvna-app
